Changes between 1.0.2 and 1.1.0-git:
------------------------------------

Access:
 * Port of the screen module from Xlib to XCB

Demuxers:
 * Support for ADPCM in .flv streams
 * EXPERIMENTAL support for .aob files from DVD-Audio (MLP and LPCM)
   (Full disc support is NOT present yet)
 * Support for TwinVQ (.vqf) files

Playlist:
 * WPL playlist support
 * ZPL playlist support
 * Lua scripts for Mpora and Vimeo playback

Audio filters:
 * Chorus/Flanger audio filter

Encoders:
 * x264, add psy-rd parameter and change default settings
 * x264, add profile-limitter sameway as x264.eve has, for example
    #transcode{vcodec=h264,venc=x264{profile=baseline,level=1.2},vb=384,width=320,height=176}
 * x264, defaults to crf=23 as x264.exe-does, if bitrate is given,
   uses ABR and if qp-value is set uses CQP
 * libx264-version 0.76 or higher is required

Video Output:
 * Added desktop mode to the Direct3D output module. It differs from DirectX
   desktop mode, because it hides the desktop icons, but reacts to mouse clicks.
 * New x11 and xv modules based on XCB

Visualisation:
 * Support of .milk visualisation files using projectM libraries

Service discovery:
 * Service discovery for Picture/Music/Video user directories

Mac OS X Interface:
 * Completely reworked user interface (based upon works from GSoC 2008)

Windows port:
 * Integration in Windows 7 taskbar

Removed modules:
 * csri
 * galaktos
 * showintf
 * transrate
 * x11, xvideo, xvid
 * gtk_main, gtk_main2, gnome_main, gnome_main2 and pda interface


Changes between 1.0.1 and 1.0.2:
--------------------------------

Decoders:
 * Native support for WMA Professional, without the use of the Win32 dlls
 * Fix issues in subtitles, especially SSA ones
 * Various fixes on theora and ogg

Demuxers:
 * Various fixes for EPG support in MPEG-TS demuxer
 * Fixes for potential stack overflow in .avi, .mp4 and .asf demuxers

Access:
 * Fixes for v4l2 devices
 * Fixes for dvb-c channels-scanning

Qt Interface: