@@ -333,6 +333,9 @@ static const struct
 #if LIBAVCODEC_VERSION_INT >= AV_VERSION_INT( 52, 34, 0 )
     { VLC_CODEC_TWINVQ, CODEC_ID_TWINVQ, AUDIO_ES },
 #endif
+#if LIBAVCODEC_VERSION_INT >= AV_VERSION_INT( 52, 36, 0 )
+    { VLC_CODEC_ATRAC1, CODEC_ID_ATRAC1, AUDIO_ES },
+#endif
 
     /* Lossless */
     { VLC_CODEC_FLAC, CODEC_ID_FLAC, AUDIO_ES },
